
<resources>

    <string name="app_name">Intents Demo 1</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Location">Location:</string>
    <string name="Showme">Show me!</string>
    <string name="Latitude">19.00</string>
    <string name="Longitude">-98.10</string>
    <string name="strTítulo">Intents Demo</string>
    <string name="strCoord">Coord</string>

</resources>